# auto-jvp-example

./: .gitignore  README.md  ext.cpp  ext.cu  float_grad.h  helper_math.h  matmul_kernel.cu  setup.py  test_jvp_correctness.py  test_matmul_correctness.py
auto_jvp_example/: __init__.py
cuda/: dual_float.h  float_grad.h  float_grad.h.bak  float_grad_array.h  float_grad_base.h  float_grad_const_float2.h  float_grad_const_float3.h  float_grad_const_float4.h  float_grad_float.h  float_grad_float2.h  float_grad_float3.h  float_grad_float4.h  float_grad_ptr.h  helper_math.h  tensor_add.cu  test_floatgrad.cu  vector_kernel_impl.h
tests/ctests/: CMakeLists.txt  advanced_tests.cu  basic_tests.cu  test_floatgrad.cu  test_floatgrad_array.cu  test_floatgrad_float2.cu  test_floatgrad_float3.cu  test_floatgrad_float4.cu  test_helper_math.cu  test_utils.h
tests/python/: test_dot_correctness.py  test_dot_jvp_correctness.py  test_floatgrad.py  test_matmul_correctness.py
